log
Thu, Oct  2, 2025  3:30:46 AM: 
 sudoku.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  0|5
total_score: 0/70
3f0e54c
Thu, Oct  2, 2025 10:39:49 AM: 
 sudoku.c | 6 ++++++
 1 file changed, 6 insertions(+)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'is_valid':
sudoku.c:48:3: error: expected '=', ',', ';', 'asm' or '__attribute__' before 'for'
   for(int i = 0 ; i < 9 ; i++)
   ^~~
sudoku.c:52:7: error: 'aparece' undeclared (first use in this function)
       aparece[k] = 0;
       ^~~~~~~
sudoku.c:52:7: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:57:19: error: 'nodo' undeclared (first use in this function)
       int valor = nodo->sudo[i][j];
                   ^~~~
sudoku.c:57:11: error: unused variable 'valor' [-Werror=unused-variable]
       int valor = nodo->sudo[i][j];
           ^~~~~
cc1.exe: all warnings being treated as errors
905e4d0
Thu, Oct  2, 2025 10:40:37 AM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'is_valid':
sudoku.c:48:3: error: expected '=', ',', ';', 'asm' or '__attribute__' before 'for'
   for(int i = 0 ; i < 9 ; i++)
   ^~~
sudoku.c:52:7: error: 'aparece' undeclared (first use in this function)
       aparece[k] = 0;
       ^~~~~~~
sudoku.c:52:7: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:57:11: error: unused variable 'valor' [-Werror=unused-variable]
       int valor = n->sudo[i][j];
           ^~~~~
cc1.exe: all warnings being treated as errors
1749251
Thu, Oct  2, 2025 10:43:19 AM: 
 sudoku.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'is_valid':
sudoku.c:48:3: error: expected '=', ',', ';', 'asm' or '__attribute__' before 'for'
   for(int i = 0 ; i < 9 ; i++)
   ^~~
sudoku.c:52:7: error: 'aparece' undeclared (first use in this function)
       aparece[k] = 0;
       ^~~~~~~
sudoku.c:52:7: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:57:11: error: unused variable 'valor' [-Werror=unused-variable]
       int valor = n->sudo[i][j];
           ^~~~~
sudoku.c:69:11: error: unused variable 'valor' [-Werror=unused-variable]
       int valor = n->sudo[i][j];
           ^~~~~
cc1.exe: all warnings being treated as errors
fd61290
Thu, Oct  2, 2025 10:50:32 AM: 
 sudoku.c | 8 ++++++++
 1 file changed, 8 insertions(+)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'is_valid':
sudoku.c:48:3: error: expected '=', ',', ';', 'asm' or '__attribute__' before 'for'
   for(int i = 0 ; i < 9 ; i++)
   ^~~
sudoku.c:52:7: error: 'aparece' undeclared (first use in this function)
       aparece[k] = 0;
       ^~~~~~~
sudoku.c:52:7: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:77:11: error: unused variable 'valor' [-Werror=unused-variable]
       int valor = n->sudo[i][j];
           ^~~~~
cc1.exe: all warnings being treated as errors
3101b78
